; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_peap.c_eap_peap_phase2_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_server_peap.c_eap_peap_phase2_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_peap_data = type { %struct.TYPE_2__*, i32* }
%struct.TYPE_2__ = type { i32* (%struct.eap_sm*)*, i32 (%struct.eap_sm*, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eap_sm*, %struct.eap_peap_data*, i32, i32)* @eap_peap_phase2_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eap_peap_phase2_init(%struct.eap_sm* %0, %struct.eap_peap_data* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.eap_sm*, align 8
  %7 = alloca %struct.eap_peap_data*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.eap_sm* %0, %struct.eap_sm** %6, align 8
  store %struct.eap_peap_data* %1, %struct.eap_peap_data** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %11 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %34

14:                                               ; preds = %4
  %15 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %16 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = icmp ne %struct.TYPE_2__* %17, null
  br i1 %18, label %19, label %34

19:                                               ; preds = %14
  %20 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %21 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32 (%struct.eap_sm*, i32*)*, i32 (%struct.eap_sm*, i32*)** %23, align 8
  %25 = load %struct.eap_sm*, %struct.eap_sm** %6, align 8
  %26 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %27 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %26, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  %29 = call i32 %24(%struct.eap_sm* %25, i32* %28)
  %30 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %31 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %30, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %31, align 8
  %32 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %33 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %32, i32 0, i32 1
  store i32* null, i32** %33, align 8
  br label %34

34:                                               ; preds = %19, %14, %4
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %9, align 4
  %37 = call %struct.TYPE_2__* @eap_server_get_eap_method(i32 %35, i32 %36)
  %38 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %39 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %38, i32 0, i32 0
  store %struct.TYPE_2__* %37, %struct.TYPE_2__** %39, align 8
  %40 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %41 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %40, i32 0, i32 0
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = icmp ne %struct.TYPE_2__* %42, null
  br i1 %43, label %45, label %44

44:                                               ; preds = %34
  store i32 -1, i32* %5, align 4
  br label %59

45:                                               ; preds = %34
  %46 = load %struct.eap_sm*, %struct.eap_sm** %6, align 8
  %47 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %46, i32 0, i32 0
  store i32 1, i32* %47, align 4
  %48 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %49 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %48, i32 0, i32 0
  %50 = load %struct.TYPE_2__*, %struct.TYPE_2__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i32 0, i32 0
  %52 = load i32* (%struct.eap_sm*)*, i32* (%struct.eap_sm*)** %51, align 8
  %53 = load %struct.eap_sm*, %struct.eap_sm** %6, align 8
  %54 = call i32* %52(%struct.eap_sm* %53)
  %55 = load %struct.eap_peap_data*, %struct.eap_peap_data** %7, align 8
  %56 = getelementptr inbounds %struct.eap_peap_data, %struct.eap_peap_data* %55, i32 0, i32 1
  store i32* %54, i32** %56, align 8
  %57 = load %struct.eap_sm*, %struct.eap_sm** %6, align 8
  %58 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %57, i32 0, i32 0
  store i32 0, i32* %58, align 4
  store i32 0, i32* %5, align 4
  br label %59

59:                                               ; preds = %45, %44
  %60 = load i32, i32* %5, align 4
  ret i32 %60
}

declare dso_local %struct.TYPE_2__* @eap_server_get_eap_method(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
